[workspace]
members = ["programs/*", "programs/cpamm/lib/*"]

# some optimizations
# https://discord.com/channels/889577356681945098/889606719829835816/896559943610662962
[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
