[package]
authors = ["Johanna Johansson <jj@sencha.so>"]
description = "Sencha constant-product automated market maker."
edition = "2021"
homepage = "https://sencha.so"
keywords = ["solana", "anchor", "amm", "sencha", "swap"]
license = "AGPL-3.0"
name = "cpamm"
repository = "https://github.com/SenchaHQ/sencha"
version = "0.10.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpamm"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "^0.23"
anchor-spl = "^0.23"
num-traits = "0.2"
u128 = "0.1"
vipers = {version = "^2.0.2", features = ["spl-associated-token-account"]}
xyk = {path = "./lib/xyk", version = "0.10.1"}
